...
  },
  "tabs": {
    "home": "Home",
    "agenda": "Agendas",
    "speeches": "Speeches",
    "speechesAndPrayers": "Speeches & Prayers",
    "settings": "Settings"
  },
  "speechStatus": {
    "not_assigned": "Not assigned",
    "assigned_not_invited": "Assigned/Not invited",
    "assigned_invited": "Assigned/Invited",
    "assigned_confirmed": "Assigned/Confirmed",
...
    "members": "Speakers",
    "topics": "Topic Library",
    "users": "App Users",
    "history": "Usage History",
    "whatsappTemplate": "WhatsApp Invitation Template",
    "language": "Language",
    "appLanguage": "App Language",
    "wardLanguage": "Ward Language",
    "wardLanguageDescription": "Only changes the language of available topic collections and WhatsApp templates",
    "timezone": "Timezone",
    "theme": "Light/Dark Theme",
    "about": "About",
    "signOut": "Sign Out",
    "signOutTitle": "Sign Out",
    "signOutMessage": "Are you sure you want to sign out?",
    "wardSettingsGroup": "Ward Settings",
    "appSettingsGroup": "App Settings",
...
